@@ -6,7 +6,9 @@ Revision history for DBIx::Class
           nonexisting prefetch
         - Fixed the prefetch with limit bug
         - New resultsed method count_rs, returns a ::ResultSetColumn
-          returning a single count value
+          which in turn returns a single count value
+        - make_column_dirty() now overwrites the deflated value with an
+          inflated one if such exists
 
 0.08107 2009-06-14 08:21:00 (UTC)
         - Fix serialization regression introduced in 0.08103 (affects
